Product_Card Image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image2.png)">
+        <div class="item" style="background-image: url(assets/image2.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">OWL</div>
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image3.png)">
+        <div class="item" style="background-image: url(assets/image3.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">CROW</div>
@@ -65,7 +65,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image4.png)">
+        <div class="item" style="background-image: url(assets/image4.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">BUTTERFLY</div>
@@ -80,7 +80,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image5.png)">
+        <div class="item" style="background-image: url(assets/image5.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">OWL</div>
@@ -95,7 +95,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image6.png)">
+        <div class="item" style="background-image: url(assets/image6.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">EAGLE</div>
@@ -110,7 +110,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image7.png)">
+        <div class="item" style="background-image: url(assets/image7.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">KINGFISHER</div>
@@ -125,7 +125,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image8.png)">
+        <div class="item" style="background-image: url(assets/image8.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">PARROT</div>
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image9.png)">
+        <div class="item" style="background-image: url(assets/image9.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">HERON</div>
@@ -155,7 +155,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image1.png)">
+        <div class="item" style="background-image: url(assets/image1.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">BUTTERFLY</div>
@@ -170,7 +170,7 @@
           </div>
         </div>
 
-        <div class="item" style="background-image: url(/assets/image2.png)">
+        <div class="item" style="background-image: url(assets/image2.png)">
           <div class="content">
             <div class="title">SLIDER</div>
             <div class="name">PARROT</div>
