--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="item" style="background-image: url(assets/image1.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">EAGLE</div>
+            <div class="name">KINGFISHER</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -38,7 +38,7 @@
         <div class="item" style="background-image: url(assets/image2.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">OWL</div>
+            <div class="name">PARROT</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -53,7 +53,7 @@
         <div class="item" style="background-image: url(assets/image3.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">CROW</div>
+            <div class="name">OWL</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -68,7 +68,7 @@
         <div class="item" style="background-image: url(assets/image4.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">BUTTERFLY</div>
+            <div class="name">KINGFISHER</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -83,7 +83,7 @@
         <div class="item" style="background-image: url(assets/image5.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">OWL</div>
+            <div class="name">EASTERN BLUEBIRDS</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -98,7 +98,7 @@
         <div class="item" style="background-image: url(assets/image6.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">EAGLE</div>
+            <div class="name">PHEASANT</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -113,7 +113,7 @@
         <div class="item" style="background-image: url(assets/image7.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">KINGFISHER</div>
+            <div class="name">HUMMINGBIRDS</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -128,7 +128,7 @@
         <div class="item" style="background-image: url(assets/image8.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">PARROT</div>
+            <div class="name">BALD EAGLE</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -143,7 +143,7 @@
         <div class="item" style="background-image: url(assets/image9.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">HERON</div>
+            <div class="name">BLUE JAY</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
@@ -158,7 +158,7 @@
         <div class="item" style="background-image: url(assets/image1.png)">
           <div class="content">
             <div class="title">SLIDER</div>
-            <div class="name">BUTTERFLY</div>
+            <div class="name">KINGFISHER</div>
             <div class="des">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis
               culpa similique consequuntur, reprehenderit dicta repudiandae.
